build search service, use ajax to submit search form and receive results

--- a/app/views/search/_search_form.html.erb
+++ b/app/views/search/_search_form.html.erb
@@ -1,4 +1,4 @@
-<form class="form-horizontal">
+<form class="form-horizontal" data-id="form">
   <fieldset>
     <legend>search by artist, song or album</legend>
     <div class="form-group">
@@ -7,7 +7,7 @@
           <span class="glyphicon glyphicon-search" aria-hidden="true" data-search="icon"></span>
         </div>
         <div class="col-lg-10">
-          <input type="text" class="form-control" id="searchTerm" placeholder="Email" data-search='input'>
+          <input type="text" class="form-control" id="searchTerm" placeholder="Email" data-search='input' name="search[term]">
         </div>
       </div>
     </div>
