--- a/app/views/search/_search_form.html.erb
+++ b/app/views/search/_search_form.html.erb
@@ -1,14 +1,22 @@
 <form class="form-horizontal" data-id="form">
   <fieldset>
-    <legend>search by artist, song or album</legend>
+    <legend> <span class="glyphicon glyphicon-search" aria-hidden="true" data-search="icon"></span> search by artist, song or album</legend> 
     <div class="form-group">
-      <div class="col-lg-8">
-        <div class="col-lg-1">
-          <span class="glyphicon glyphicon-search" aria-hidden="true" data-search="icon"></span>
-        </div>
-        <div class="col-lg-10">
-          <input type="text" class="form-control" id="searchTerm" placeholder="Email" data-search='input' name="search[term]">
-        </div>
+      <div class="col-lg-12" data-search='input'>
+        <label>keyword:</label>
+        <input type="text" class="form-control" id="searchTerm" placeholder="enter any keyword to preform a general search" name="search[all][term]">
+      </div>
+      <div class="col-lg-12" data-search='input'>
+        <label>song title:</label>
+        <input type="text" class="form-control" id="searchTerm" placeholder="song title" name="search[song][term]">
+      </div>
+      <div class="col-lg-12" data-search='input'>
+        <label>artist name:</label>
+        <input type="text" class="form-control" id="searchTerm" placeholder="artist name" name="search[artist][term]">
+      </div>
+      <div class="col-lg-12" data-search='input'>
+        <label>album title:</label>
+        <input type="text" class="form-control" id="searchTerm" placeholder="album title" name="search[album][term]">
       </div>
     </div>
   </fieldset>
