--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -1,30 +1,6 @@
 <div class="col-lg-12">
-  <div class="col-lg-6">
-    <%= image_tag @album.image_url, style: 'height: 400px; width: 400px' %>
-  </div>
-
-  <div class="col-lg-6">
-    <h2><%= @album.title %></h2>
-    <p><%= link_to @album.artist.name, artist_path(@album.artist) if @album.artist%></p>
-    <p>
-    <table class="table">
-      <thead>
-        <tr>
-          <th>#</th>
-          <th>title</th> 
-        </tr>
-      </thead>
-      <tbody>
-        <% @album.songs.each.with_index(1) do |song, i| %>
-        <tr>
-          <td><%= i %></td>
-          <td><%= link_to song.title, song_path(song) %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-    </p>
-  </div>
+  <h1><%= link_to @album.artist.name, artist_path(@album.artist) %></h1>
+  <%= render partial: 'albums/album_display', locals: {album: @album} %>
 
   
 </div>
