--- a/app/views/search/_search_results.html.erb
+++ b/app/views/search/_search_results.html.erb
@@ -1,3 +1,8 @@
+<% if @songs.empty? %>
+
+no results found : (
+<% else %>
+
 <table class="table table-striped table-hover ">
   <thead>
     <tr>
@@ -18,3 +23,5 @@
     <% end %>
   </tbody>
 </table> 
+
+<% end %>
